--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tvscreenthingy",
-  "productName": "tvscreenthingy",
+  "name": "astro",
+  "productName": "Astro",
   "version": "0.1.0",
-  "description": "My Electron application description",
+  "description": "An application for showing statistics on a screen",
   "main": "src/index.js",
   "scripts": {
     "start": "SET APP_DEV=true && electron .",
@@ -16,10 +16,29 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "fastify": "^4.23.2",
+    "ip": "^1.1.8"
   },
   "devDependencies": {
     "electron": "26.2.2",
     "electron-builder": "^24.6.3"
+  },
+  "build": {
+    "appId": "xyz.phazed.astro",
+    "productName": "Astro",
+    "copyright": "Made with ❤️ by _phaz",
+    "win": {
+      "target": "dir",
+      "files": [
+        "src/*",
+        "src/**/*",
+        "ui/*",
+        "ui/panel/*",
+        "ui/assets/*",
+        "ui/panel/assets/*",
+        "build/*"
+      ]
+    }
   }
 }
