--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,8 +72,8 @@ jobs:
       - name: Archive Release
         uses: thedoctor0/zip-release@0.7.1
         with:
-          type: 'tar'
-          filename: 'build.tar.gz'
+          type: 'zip'
+          filename: 'build.zip'
           path: dist/win-unpacked
 
       - name: Upload Build
@@ -82,6 +82,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build.tar.gz
-          asset_name: ${{ steps.extract_version.outputs.version }}-release.tar.gz
+          asset_path: ./build.zip
+          asset_name: ${{ steps.extract_version.outputs.version }}-release.zip
           asset_content_type: application/zip
